# degree_work

./: CMakeLists.txt  package.xml
config/: IP_lin_data.txt  IP_rotat_data.txt  dt.txt  dtrobot1.txt  dtrobot2.txt  errrobot1.txt  errrobot2.txt  filtering.txt  filtering_at_rest.txt  filtrobot1.txt  filtrobot2.txt  filtrobot2_in_move.txt  list_of_agents.yaml  master_pose.yaml  rviz_for_sim.rviz  sim_list_of_agents.yaml  sim_world.world
include/: AgentProgram.h  AgentProgram.hpp~  AgentProgram.h~  AgentProgram_P_regul.h~  AgentProgram_coords.h~  AgentProgram_own_system.h~  AgentProgram_simple.h  AgentProgram_simple.h~  IdentificationNode.h  IdentificationNode.h~  MultSystem.hpp~  Robot.h  Robot.hpp~  SafetyNode.h
launch/: broadcasting.launch  broadcasting.launch~  hand_ms.launch  hand_ms.launch~  identification.launch  identification.launch~  master_broadcaster.launch  master_broadcaster.launch~  multiagent_system.launch  multiagent_system.launch~  safety_node.launch  safety_node.launch~  sim_multiagent_system.launch  sim_multiagent_system.launch~
scilab_scripts/: find_orient.sce  find_place.sce
src/: AgentProgram (копия).cpp~  AgentProgram.cpp  AgentProgram_P_regul.cpp  AgentProgram_P_regul.cpp~  AgentProgram_coords.cpp~  AgentProgram_own_system.cpp~  AgentProgram_simple.cpp  AgentProgram_simple.cpp~  ControlProgram.cpp~  IdentificationNode.cpp  IdentificationNode.cpp~  MultSystem.cpp~  Robot.cpp~  SafetyNode.cpp  SafetyNode.cpp~  agent_program.cpp  agent_program.cpp~  broadcast_northstar_node.cpp  broadcast_northstar_node.cpp~  control_program.cpp~  main_system.cpp~  master_broadcaster_node.cpp  master_broadcaster_node.cpp~  mult_system.cpp~  safety_node.cpp
