<?xml version="1.0"?>
<package>

<name>degree_work</name>
<version>0.0.0</version>
<description>The degree_work package</description> 
<maintainer email="evgeniy@todo.todo">evgeniy</maintainer>

<license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>	

<build_depend>roscpp</build_depend>
<run_depend>roscpp</run_depend>
<build_depend>geometry_msgs</build_depend>
<run_depend>geometry_msgs</run_depend>
<build_depend>robotino_msgs</build_depend>
<run_depend>robotino_msgs</run_depend>
<build_depend>sensor_msgs</build_depend>
<run_depend>sensor_msgs</run_depend>
<build_depend>tf</build_depend>
<run_depend>tf</run_depend>

<export></export>

</package>
